<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

    <TextView
        android:id="@+id/eventTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:textColor="#F3F781"
        android:layout_centerHorizontal="true"
        android:text="@string/eventText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnChangeDate"
        android:background="@drawable/btn_blue"
    	style="@style/ButtonText"
    	android:layout_marginTop="60dp"
    	android:layout_marginLeft="5dp" 
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/startDate" />
    
 <TextView
        android:id="@+id/dateView"
        android:textColor="#F3F781"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/valueNotSet"
    	android:layout_marginTop="60dp"
    	android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/btnChangeDate"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 
  <TextView
        android:id="@+id/timeView"
        android:textColor="#F3F781"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/valueNotSet"
        android:layout_marginTop="120dp"
    	android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/btnChangeTime"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   
    
    <Button
        android:id="@+id/btnChangeTime"
        android:background="@drawable/btn_blue"
    	style="@style/ButtonText"
        android:layout_width="170dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content"
        android:text="@string/startTime" />
    
  
  <TextView
        android:id="@+id/endTimeView"
        android:textColor="#F3F781"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/valueNotSet"
        android:layout_marginTop="180dp"
    	android:layout_marginLeft="30dp"
    	android:layout_toRightOf="@+id/btnEndTime"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        android:id="@+id/btnEndTime"
        android:background="@drawable/btn_blue"
        android:layout_marginTop="180dp"
    	style="@style/ButtonText"	
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" 
        android:text="@string/endTime" />
    
   <Button
        android:id="@+id/btnSetup"
        android:background="@drawable/btn_blue"
    	style="@style/ButtonText"
    	android:layout_marginTop="240dp"
        android:layout_width="fill_parent"
        android:drawableLeft="@drawable/clock"
        android:layout_height="wrap_content"
        android:text="@string/setEvent" />
   
     <Button
        android:id="@+id/btnGoBack"
        android:background="@drawable/btn_blue"
    	style="@style/ButtonText"
    	android:layout_marginTop="300dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventBack" />
</RelativeLayout>
