<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

<TextView
        android:id="@+id/ringtoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#F3F781"
        android:text="@string/ringtoneHeader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

<Button
    android:id="@+id/ringtoneSelect"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:layout_marginTop="100dp"
    android:background="@drawable/btn_blue"
    style="@style/ButtonText"
    android:text="@string/ringtoneSelect" />

<Button
    android:id="@+id/setRingtone"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="160dp"
    android:background="@drawable/btn_blue"
    style="@style/ButtonText"
    android:text="@string/ringtoneSet" />

</RelativeLayout>
