<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globedroid" >

    <TextView 
        android:id="@+id/mainTitle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    
    <ListView
        android:id="@+id/situationlist"    
        android:layout_width="fill_parent"
        android:divider="#000000"
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true"
        android:cacheColorHint="#00000000"
        android:layout_marginTop="50dp"
        android:dividerHeight="2dp"
        android:layout_height="400dp" />

    <Button
        android:id="@+id/AddSituation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/addSituation"
        android:drawableLeft="@drawable/plus"
        android:background="@drawable/btn_blue"
        android:layout_marginTop="5dp"
        style="@style/ButtonText"
        />
    
    <Button
        android:id="@+id/loc_bookmarks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AddSituation"
        android:text="@string/loc_bookmark"
        android:drawableLeft="@drawable/plus"
        android:background="@drawable/btn_blue"
        style="@style/ButtonText"
        />

</RelativeLayout>